- [web fix] small gap

--- a/web/styles/main.module.css
+++ b/web/styles/main.module.css
@@ -4,6 +4,7 @@
     height: var(--full-height);
     overflow: hidden;
     display: flex;
+    gap: 5px;
 }
 
 .DataContainer{
